--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + React</title>
 
-    <script type="text/javascript">
+    <!-- <script type="text/javascript">
       (function (l) {
         if (l.search[1] === "/") {
           var decoded = l.search
@@ -23,7 +23,7 @@
           );
         }
       })(window.location);
-    </script>
+    </script> -->
   </head>
   <body>
     <div id="root"></div>
